<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/fragment_fizz_buzz_form">

    <action
        android:id="@+id/navigate_to_stats"
        app:destination="@id/fragment_fizz_buzz_stats" />

    <fragment
        android:id="@+id/fragment_placeholder"
        android:name="com.waxym.ui.fragment.PlaceHolderFragment"
        android:label="@string/label_placeholder"
        tools:layout="@layout/fragment_placeholder" />

    <fragment
        android:id="@+id/fragment_fizz_buzz_form"
        android:name="com.waxym.ui.fragment.FizzBuzzFormFragment"
        android:label="@string/fragment_title_form"
        tools:layout="@layout/fragment_fizzbuzz_form">
        <action
            android:id="@+id/navigate_to_list"
            app:destination="@id/fragment_fizz_buzz_list" />
    </fragment>

    <fragment
        android:id="@+id/fragment_fizz_buzz_list"
        android:name="com.waxym.ui.fragment.FizzBuzzListFragment"
        android:label="@string/fragment_title_list"
        tools:layout="@layout/fragment_fizzbuzz_list">
        <argument
            android:name="fizzMultiple"
            app:argType="integer" />
        <argument
            android:name="fizzLabel"
            app:argType="string" />
        <argument
            android:name="buzzMultiple"
            app:argType="integer" />
        <argument
            android:name="buzzLabel"
            app:argType="string" />
        <argument
            android:name="limit"
            app:argType="integer" />
    </fragment>

    <fragment
        android:id="@+id/fragment_fizz_buzz_stats"
        android:name="com.waxym.ui.fragment.FizzBuzzStatsFragment"
        android:label="@string/fragment_title_stats"
        tools:layout="@layout/fragment_fizzbuzz_stats" />

</navigation>