<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>
        <variable
            name="viewModel"
            type="com.waxym.ui.viewmodel.FizzBuzzFormViewModel" />
    </data>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/label_context"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_default"
                android:text="@string/label_form_context"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_layout_fizz_multiple"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_default"
                android:layout_marginTop="@dimen/margin_default"
                android:layout_marginBottom="@dimen/margin_small"
                android:hint="@string/label_form_fizz_multiple_hint"
                android:maxLines="1"
                app:errorEnabled="true"
                app:helperText="@string/form_helper_mandatory_field"
                app:helperTextTextAppearance="@style/TextAppearance.MaterialComponents.Caption"
                app:layout_constraintTop_toBottomOf="@id/label_context">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:text="@={viewModel.fizzMultiple}"
                    android:inputType="number" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_layout_fizz_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_default"
                android:layout_marginVertical="@dimen/margin_small"
                android:hint="@string/label_form_fizz_label_hint"
                android:maxLines="1"
                app:errorEnabled="true"
                app:helperText="@string/form_helper_mandatory_field"
                app:helperTextTextAppearance="@style/TextAppearance.MaterialComponents.Caption"
                app:layout_constraintTop_toBottomOf="@id/input_layout_fizz_multiple">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:text="@={viewModel.fizzLabel}"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_layout_buzz_multiple"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_default"
                android:layout_marginVertical="@dimen/margin_small"
                android:hint="@string/label_form_buzz_multiple_hint"
                android:maxLines="1"
                app:errorEnabled="true"
                app:helperText="@string/form_helper_mandatory_field"
                app:helperTextTextAppearance="@style/TextAppearance.MaterialComponents.Caption"
                app:layout_constraintTop_toBottomOf="@id/input_layout_fizz_label">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:text="@={viewModel.buzzMultiple}"
                    android:inputType="number" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_layout_buzz_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_default"
                android:layout_marginVertical="@dimen/margin_small"
                android:hint="@string/label_form_buzz_label_hint"
                android:maxLines="1"
                app:errorEnabled="true"
                app:helperText="@string/form_helper_mandatory_field"
                app:helperTextTextAppearance="@style/TextAppearance.MaterialComponents.Caption"
                app:layout_constraintTop_toBottomOf="@id/input_layout_buzz_multiple">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:text="@={viewModel.buzzLabel}"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_layout_limit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_default"
                android:layout_marginVertical="@dimen/margin_small"
                android:hint="@string/label_form_limit_hint"
                android:maxLines="1"
                app:errorEnabled="true"
                app:helperText="@string/form_helper_mandatory_field"
                app:helperTextTextAppearance="@style/TextAppearance.MaterialComponents.Caption"
                app:layout_constraintTop_toBottomOf="@id/input_layout_buzz_label">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionDone"
                    android:text="@={viewModel.limit}"
                    android:inputType="number" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/action_compute"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_default"
                android:text="@string/action_fizz_buzz"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/input_layout_limit"
                app:layout_constraintVertical_bias="1.0" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>